Adds  a notes.html , main.css to my project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>Yik Hang Fong</title>
 </head>
 
@@ -12,20 +13,49 @@
     <header>
         <h1>Yik Hang Fong</h1>
     </header>
+    <nav class="navbar">
+        <a href="index.html" target="_blank">Profile</a>
+        <a href="notes.html" target="_blank">Notes</a>
+    </nav>
     <main>
         <article>
             <header>
-                <h3>About Me</h3>
+                <img src="images/profile_picture.jpg" alt="profile_picture" width="500" title="My profile pic:)"
+                    class="profile_picture">
+                <h3 class="header">About Me</h3>
             </header>
-            <p>
-                Hi. I'm Yik Hang Fong and I arrived in Canada on 11<sup>th</sup> August. <abbr title="Hong Kong">HK</abbr> is my home country which is a busy city with lots of energetic people. I studied furniture design before and now looking for an opportunity to change my career path, to find what I want to do for the rest of my life.
-                <blockquote>
-                    I'm at that stage in my life where I keep myself out of unnecessary arguments, so, even if you tell me 1+1=5, you're absolutely correct, enjoy. <cite>― Keanu Reeves</cite>
-                </blockquote>
-            </p>
-            <p>
-                Studying abroad is challenging for me when I am not a talkative person even with using Cantonese. <em>But I am curious about new things and willing to learn at my own pace.</em> I like listening to the opinions of someone that has different values. When it comes to conflict, I won't judge or argue with them. Free free to talk to me :)
-            </p>
+            <div>
+                <aside class="aside">
+                    <div class="vertical_line">
+                        <h3>Hobbies</h3>
+                        <ul>
+                            <li>Manga</li>
+                            <li>Anime</li>
+                            <li>Drawing</li>
+                        </ul>
+                    </div>
+                </aside>
+                <p>
+                    Hi. I'm Yik Hang Fong and I arrived in Canada on 11<sup>th</sup> August. <abbr
+                        title="Hong Kong">HK</abbr> is my home country which is a busy city with lots of energetic
+                    people. I
+                    studied furniture design before and now looking for an opportunity to change my career path, to find
+                    what I want to do for the rest of my life.
+                    <blockquote>
+                        I'm at that stage in my life where I keep myself out of unnecessary arguments, so, even if you
+                        tell
+                        me 1+1=5, you're absolutely correct, enjoy. <cite>― Keanu Reeves</cite>
+                    </blockquote>
+                </p>
+                <p>
+                    Studying abroad is challenging for me when I am not a talkative person even with using Cantonese.
+                    <em>But I am curious about new things and willing to learn at my own pace.</em> I like listening to
+                    the
+                    opinions of someone that has different values. When it comes to conflict, I won't judge or argue
+                    with
+                    them. Free free to talk to me :)
+                </p>
+            <div>
         </article>
     </main>
     <footer>
