--- a/notes.html
+++ b/notes.html
@@ -25,6 +25,12 @@
                 <dt>nav</dt>
                 <dd>It is the navigation of the page. You can link to other pages through here.</dd>
 
+                <dt>article</dt>
+                <dd></dd>
+                
+                <dt>aside</dt>
+                <dd></dd>
+                
                 <dt>footer</dt>
                 <dd>It is the footer of a page. It can be added inside article.</dd>
             </dl>
