--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
         <h1>Yik Hang Fong</h1>
     </header>
     <nav class="navbar">
-        <a href="index.html" target="_blank">Profile</a>
-        <a href="notes.html" target="_blank">Notes</a>
+        <ul>
+            <li><a href="index.html" target="_blank">Profile</a></li>
+            <li><a href="notes.html" target="_blank">Notes</a></li>
+        </ul>
     </nav>
     <main>
         <article>
             <header>
-                <img src="images/profile_picture.jpg" alt="profile_picture" width="500" title="My profile pic:)"
-                    class="profile_picture">
-                <h3 class="header">About Me</h3>
+                <img id="my-image" src="images/profile_picture.jpg" alt="profile_picture" width="500"
+                    title="My profile pic:)" class="profile_picture">
+                <h3 class="site-title">About Me</h3>
             </header>
             <div>
                 <aside class="aside">
                     <div class="vertical_line">
                         <h3>Hobbies</h3>
-                        <ul>
+                        <ul class="hobbies_list">
                             <li>Manga</li>
                             <li>Anime</li>
                             <li>Drawing</li>
@@ -38,8 +40,8 @@
                 <p>
                     Hi. I'm Yik Hang Fong and I arrived in Canada on 11<sup>th</sup> August. <abbr
                         title="Hong Kong">HK</abbr> is my home country which is a busy city with lots of energetic
-                    people. I
-                    studied furniture design before and now looking for an opportunity to change my career path, to find
+                    people. I studied furniture design before and now looking for an opportunity to change my career
+                    path, to find
                     what I want to do for the rest of my life.
                     <blockquote>
                         I'm at that stage in my life where I keep myself out of unnecessary arguments, so, even if you
@@ -47,6 +49,7 @@
                         me 1+1=5, you're absolutely correct, enjoy. <cite>― Keanu Reeves</cite>
                     </blockquote>
                 </p>
+                
                 <p>
                     Studying abroad is challenging for me when I am not a talkative person even with using Cantonese.
                     <em>But I am curious about new things and willing to learn at my own pace.</em> I like listening to
@@ -55,7 +58,7 @@
                     with
                     them. Free free to talk to me :)
                 </p>
-            <div>
+            </div>
         </article>
     </main>
     <footer>
