--- a/notes.html
+++ b/notes.html
@@ -26,11 +26,11 @@
                 <dd>It is the navigation of the page. You can link to other pages through here.</dd>
 
                 <dt>article</dt>
-                <dd></dd>
+                <dd>It is used for containing independent content.</dd>
                 
                 <dt>aside</dt>
-                <dd></dd>
-                
+                <dd>It is used for containing secondary content which is not related to the main content.</dd>
+
                 <dt>footer</dt>
                 <dd>It is the footer of a page. It can be added inside article.</dd>
             </dl>
